assert(false) failed: modified node was not processed by IGVN.transform_old()

XMLWordPrintable

    • b21

      JDK10 hotspot hit assertion in compiled mode on different platforms and cpus. hs_err_pid2256.log is attached. JDK9 is not affected:
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/opt/jprt/T/P1/081958.tschatzl/s/hotspot/src/share/vm/opto/phaseX.cpp:1066), pid=2256, tid=2291
      # assert(false) failed: modified node was not processed by IGVN.transform_old()
      #
      # JRE version: Java(TM) SE Runtime Environment (10.0) (fastdebug build 10-internal+0-2017-03-07-081958.tschatzl.8175900)
      # Java VM: Java HotSpot(TM) Server VM (fastdebug 10-internal+0-2017-03-07-081958.tschatzl.8175900, compiled mode, tiered, g1 gc, linux-x86)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e" (or dumping to /export/home/aginfra/sandbox/results/ResultDir/anonymous-simple_copy_5/core.2256)
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.java.com/bugreport/crash.jsp
      #

      --------------- S U M M A R Y ------------

      Command Line: -Xcomp -Xcomp -Xmx256m -agentlib:redefineClasses runtime.ParallelClassLoading.shared.DelegatingToSystemLoadingController -useXML -baseClassDir /export/home/aginfra/CommonData/vm/bin/classes/runtime/ParallelClassLoading/shared/hierarchies/static-load -configDir /export/home/aginfra/sandbox/results/ResultDir/anonymous-simple_copy_5/

      Host: <...> Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz, 4 cores, 14G, Oracle Linux Server release 7.1
      Time: Tue Mar 7 10:18:04 2017 PST elapsed time: 18 seconds (0d 0h 0m 18s)

      --------------- T H R E A D ---------------

      Current thread (0xd47b4800): JavaThread "C2 CompilerThread1" daemon [_thread_in_native, id=2291, stack(0xd457d000,0xd45fe000)]


      Current CompileTask:
      C2: 18686 4831 b 4 custom.A8::unwrappedGeneratedCode (2223 bytes)

      Stack: [0xd457d000,0xd45fe000], sp=0xd45fb1f0, free space=504k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x145e0e7] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137;; VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137
      V [libjvm.so+0x145eed0] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30;; VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30
      V [libjvm.so+0x928570] report_vm_error(char const*, int, char const*, char const*, ...)+0x60;; report_vm_error(char const*, int, char const*, char const*, ...)+0x60
      V [libjvm.so+0x11c92bf] PhaseIterGVN::verify_PhaseIterGVN()+0x42f;; PhaseIterGVN::verify_PhaseIterGVN()+0x42f
      V [libjvm.so+0x8a57ba] Compile::Optimize()+0x76a;; Compile::Optimize()+0x76a
      V [libjvm.so+0x8a724a] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x106a;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x106a
      V [libjvm.so+0x6eed8e] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x37e;; C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x37e
      V [libjvm.so+0x8b315b] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x5fb;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0x5fb
      V [libjvm.so+0x8b4107] CompileBroker::compiler_thread_loop()+0x2e7;; CompileBroker::compiler_thread_loop()+0x2e7
      V [libjvm.so+0x13ae958] compiler_thread_entry(JavaThread*, Thread*)+0x28;; compiler_thread_entry(JavaThread*, Thread*)+0x28
      V [libjvm.so+0x13c1490] JavaThread::thread_main_inner()+0x220;; JavaThread::thread_main_inner()+0x220
      V [libjvm.so+0x13c172a] JavaThread::run()+0x1ca;; JavaThread::run()+0x1ca
      V [libjvm.so+0x11315e4] thread_native_entry(Thread*)+0x124;; thread_native_entry(Thread*)+0x124
      C [libpthread.so.0+0x6b2c] start_thread+0xcc
      C [libc.so.6+0xf75fe] clone+0x5e

        1. hs_err_pid2256.log
          42 kB
          Dmitry Dmitriev
        2. A8.class
          8 kB
          Tobias Hartmann
        3. replay_pid25081.log
          130 kB
          Tobias Hartmann

            Assignee:
            Tobias Hartmann
            Reporter:
            Dmitry Dmitriev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: