8176441: assert(false) failed: modified node was not processed by IGVN.transform_old()

The shiftNode needs to be added to the IGVN worklist after being modified.

Reviewed-by: kvn, vlivanov