hotspot/src/share/vm/opto/mulnode.cpp
@@ -648,6 +648,7 @@ static int maskShiftAmount(PhaseGVN *phase, Node *shiftNode, int nBits) {
 
   if (shift != maskedShift) {
     shiftNode->set_req(2, phase->intcon(maskedShift)); // Replace shift count with masked value.
+    phase->igvn_rehash_node_delayed(shiftNode);
   }
 
   return maskedShift;
